# astrotimes

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPU_QUICK_REFERENCE.txt  Cargo.toml  ELEVATION_FEATURE.md  ELEVATION_TEST_RESULTS.md  ETOPO_ENCODING_NOTES.md  ETOPO_INTEGRATION_SUCCESS.md  LICENSE  README.md  REPO_CONFIGURATION_SUMMARY.md  SECURITY.md  accuracy_report.html  test_moon_transit.sh  validate_moon_transit.py
.cargo/: config.toml
.github/: QUICK_REFERENCE.md  REPOSITORY_SETTINGS.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml
data/: ETOPO_land_ocean.tif  urban_areas.json
docs/: README.md
docs/development/: accuracy.md  architecture.md  lunar-calculations.md  setup.md  solar-calculations.md
docs/features/: README.md  ai-insights.md  calendar.md  city-database.md  cli-reference.md  interactive-mode.md  json-output.md
docs/installation/: README.md  quick-start.md  troubleshooting.md
docs/optimization/: performance.md
examples/: README.md  basic_usage.rs  batch_processing.rs  city_search.rs  custom_events.rs  moon_phases.rs  test_benchmark.rs
src/: ai.rs  benchmark.rs  calendar.rs  calendar_optimized.rs  city.rs  cli.rs  config.rs  cpu_features.rs  elevation.rs  events.rs  lib.rs  location.rs  location_source.rs  main.rs  output.rs  time_sync.rs  usno_validation.rs
src/astro/: coordinates.rs  m1_optimizations.rs  mod.rs  moon.rs  moon_batch_optimized.rs  simd_math.rs  sun.rs  time_utils.rs  units.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
