[package]
name = "astrotimes"
version = "0.1.0"
edition = "2021"
authors = ["Mike McLarney"]
description = "A high-precision astronomical CLI for sun and moon calculations"
license = "MIT"

[dependencies]
# CLI and terminal UI
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"

# Date and time handling
chrono = "0.4"
chrono-tz = "0.9"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Astronomical calculations - we'll implement custom algorithms
# based on NOAA and Meeus for maximum accuracy

# HTTP for location detection
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Fuzzy search for city picker
fuzzy-matcher = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Math utilities
num-traits = "0.2"

# Home directory detection
dirs = "5.0"

# Parallel processing
rayon = "1.10"

# Standard release profile (all platforms)
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = false

# M1 Max-optimized profile (Apple Silicon)
# Optimized for 10-core CPU (8 performance + 2 efficiency)
# with 16-core GPU and 32MB L2 cache per performance core
[profile.release-m1-max]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = false
debug = false

# Development profile
[profile.dev]
opt-level = 2
debug = true

# Test profile
[profile.test]
opt-level = 2

# Benchmarking profile
[profile.bench]
inherits = "release"
debug = true

[[bin]]
name = "accuracy_report"
path = "src/bin/accuracy_report.rs"

[[bin]]
name = "perf_benchmark"
path = "src/bin/perf_benchmark.rs"

[[bin]]
name = "simd_benchmark"
path = "src/bin/simd_benchmark.rs"

[[bin]]
name = "m1_max_benchmark"
path = "src/bin/m1_max_benchmark.rs"

[[bin]]
name = "moonrise_moonset_benchmark"
path = "src/bin/moonrise_moonset_benchmark.rs"

[[bin]]
name = "calendar_benchmark"
path = "src/bin/calendar_benchmark.rs"
