[package]
name = "solunatus"
version = "0.2.3"
edition = "2021"
authors = ["Mike McLarney"]
description = "High-precision astronomical calculation library and CLI for sun/moon positions, rise/set times, and lunar phases"
license = "MIT"
repository = "https://github.com/FunKite/solunatus"
homepage = "https://github.com/FunKite/solunatus"
documentation = "https://docs.rs/solunatus"
readme = "README.md"
keywords = ["astronomy", "sun", "moon", "sunrise", "astronomical"]
categories = ["science", "command-line-utilities"]
autobins = false
exclude = [
    "dist/*",
    "*.html",
    "CPU_QUICK_REFERENCE.txt",
    ".cargo/",
    "CLAUDE.md",
]

# Library configuration (default)
[lib]
name = "solunatus"
path = "src/lib.rs"

# Main CLI binary
[[bin]]
name = "solunatus"
path = "src/main.rs"

[dependencies]
# CLI and terminal UI
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.29"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Astronomical calculations - we'll implement custom algorithms
# based on NOAA and Meeus for maximum accuracy

# HTTP for location detection
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Fuzzy search for city picker
fuzzy-matcher = "0.3"

# Error handling
anyhow = "1.0"

# System directories
dirs = "5.0"

# Parallel processing
rayon = "1.10"

# CPU Feature Flags for different architectures
[features]
default = ["cpu-portable"]
cpu-portable = []            # Portable baseline (no CPU-specific features)
cpu-native = []              # Native CPU with available features
cpu-avx2 = []                # AVX2 for Intel/AMD x86_64
cpu-neon = []                # NEON for ARM64 (Apple Silicon, etc.)
cpu-sve = []                 # SVE for high-end ARM64
parallel = []                # Use rayon for parallelization
benchmarks = []              # Build benchmark binaries (not installed by default)

# Standard release profile (all platforms) - Portable baseline
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = false

# M1/M3 Max-optimized profile (Apple Silicon)
# Optimized for 10-core CPU (8 performance + 2 efficiency)
# with 16-core GPU and 32MB L2 cache per performance core
[profile.release-m1-max]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = false
debug = false

# x86_64 with AVX2 (Intel Haswell+, AMD Ryzen+)
[profile.release-x86-64-v3]
inherits = "release"
lto = "fat"
codegen-units = 1

# x86_64 with SIMD only (SSE/SSE2, no AVX2)
[profile.release-x86-64-v2]
inherits = "release"
lto = true

# Generic ARM64 (portable Apple Silicon, Linux ARM, etc.)
[profile.release-aarch64-generic]
inherits = "release"
lto = true
codegen-units = 1

# High-end ARM64 with SVE support (server/workstation)
[profile.release-aarch64-sve]
inherits = "release"
lto = "fat"
codegen-units = 1

# Development profile
[profile.dev]
opt-level = 2
debug = true

# Test profile
[profile.test]
opt-level = 2

# Benchmarking profile
[profile.bench]
inherits = "release"
debug = true

# Benchmark binaries excluded from cargo install
# These can still be built locally with: cargo build --bin <name>
# [[bin]]
# name = "accuracy_report"
# path = "src/bin/accuracy_report.rs"
#
# [[bin]]
# name = "perf_benchmark"
# path = "src/bin/perf_benchmark.rs"
#
# [[bin]]
# name = "simd_benchmark"
# path = "src/bin/simd_benchmark.rs"
#
# [[bin]]
# name = "m1_max_benchmark"
# path = "src/bin/m1_max_benchmark.rs"
#
# [[bin]]
# name = "moonrise_moonset_benchmark"
# path = "src/bin/moonrise_moonset_benchmark.rs"
#
# [[bin]]
# name = "calendar_benchmark"
# path = "src/bin/calendar_benchmark.rs"
